baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.AppConfig {
  api_key: string
}
function user.CallOpenAI(cfg: user.AppConfig) -> root.llm.openai.OpenAIResponse  [expr] {
  {  } root.llm.openai.OpenAIResponse { text: "response", model: "gpt-4" }
}
function user.from_json(j: baml.json.json) -> user.AppConfig  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "api_key": self.api_key.to_json() }
}
class user.llm.openai.OpenAIResponse {
  text: string
  model: string
}
function user.llm.openai.from_json(j: baml.json.json) -> user.llm.openai.OpenAIResponse  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.llm.openai.to_json(self: ?) -> baml.json.json  [expr] {
  map { "text": self.text.to_json(), "model": self.model.to_json() }
}
