baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.CallOpenAI(cfg: AppConfig) -> llm.openai.OpenAIResponse {
    // Locals:
    let _0: llm.openai.OpenAIResponse // _0 // return
    let _1: AppConfig // cfg // param

    bb0: {
        _0 = user.llm.openai.OpenAIResponse { const "response", const "gpt-4" };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.AppConfig.from_json(j: baml.json.json) -> AppConfig {
    // Locals:
    let _0: AppConfig // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(AppConfig);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.AppConfig.to_json(self: AppConfig) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: AppConfig // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(AppConfig);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.llm.openai.OpenAIResponse.from_json(j: baml.json.json) -> llm.openai.OpenAIResponse {
    // Locals:
    let _0: llm.openai.OpenAIResponse // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(llm.openai.OpenAIResponse);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.llm.openai.OpenAIResponse.to_json(self: llm.openai.OpenAIResponse) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: llm.openai.OpenAIResponse // self // param
    let _2: string
    let _3: type

    bb0: {
        _3 = load_type(llm.openai.OpenAIResponse);
        _2 = call const fn baml.json.to_string<copy _3>(copy _1) -> [bb1];
    }

    bb1: {
        _0 = call const fn baml.json.parse(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}
