baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.AppConfig {
  api_key: string
}
function user.AppConfig.to_json(self: user.AppConfig) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<AppConfig>(self)) : baml.json.json
}
function user.AppConfig.from_json(j: baml.json.json) -> user.AppConfig throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.AppConfig
}
function user.CallOpenAI(cfg: user.AppConfig) -> user.llm.openai.OpenAIResponse throws never {
  { : user.llm.openai.OpenAIResponse
    root.llm.openai.OpenAIResponse { text: "response", model: "gpt-4" } : user.llm.openai.OpenAIResponse
  }
}
class user.AppConfig$stream {
  api_key: null | string
}
class user.llm.openai.OpenAIResponse {
  text: string
  model: string
}
function user.llm.openai.OpenAIResponse.to_json(self: user.llm.openai.OpenAIResponse) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<OpenAIResponse>(self)) : baml.json.json
}
function user.llm.openai.OpenAIResponse.from_json(j: baml.json.json) -> user.llm.openai.OpenAIResponse throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.llm.openai.OpenAIResponse
}
class user.llm.openai.OpenAIResponse$stream {
  text: null | string
  model: null | string
}
