baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 12370
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
