baml_language/crates/baml_tests/snapshots/compiles/namespaces_nested/baml_tests__compiles__namespaces_nested__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.AppConfig.from_json(j: baml.json.json) -> AppConfig {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type AppConfig
    load_var _2
    call baml.json.from_string
    return
}

function user.AppConfig.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .api_key
    call baml.String.to_json
    load_const "api_key"
    alloc_map 1
    return
}

function user.CallOpenAI(cfg: AppConfig) -> llm.openai.OpenAIResponse {
    alloc_instance user.llm.openai.OpenAIResponse
    load_const "response"
    init_field .text
    load_const "gpt-4"
    init_field .model
    return
}

function user.llm.openai.OpenAIResponse.from_json(j: baml.json.json) -> llm.openai.OpenAIResponse {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type llm.openai.OpenAIResponse
    load_var _2
    call baml.json.from_string
    return
}

function user.llm.openai.OpenAIResponse.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .0
    call baml.String.to_json
    store_var _2
    load_var self
    load_field .1
    call baml.String.to_json
    store_var _5
    load_var _2
    load_var _5
    load_const "text"
    load_const "model"
    alloc_map 2
    return
}
